modify main image

--- a/src/main/webapp/WEB-INF/views/css/agency.css
+++ b/src/main/webapp/WEB-INF/views/css/agency.css
@@ -231,7 +231,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/main4.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -245,6 +245,7 @@ header {
 header .intro-text {
   padding-top: 100px;
   padding-bottom: 50px;
+  color : #222222;
 }
 header .intro-text .intro-lead-in {
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
