--- a/src/main/webapp/WEB-INF/css/chatboot.css
+++ b/src/main/webapp/WEB-INF/css/chatboot.css
@@ -186,3 +186,13 @@ body {
   display: none;
   padding-top:150px;
 }
+
+.read{
+	font-size:10px;
+	color:black;
+}
+
+.unread{
+	font-size:10px;
+	color:red;
+}
