--- a/src/main/webapp/WEB-INF/css/chatboot.css
+++ b/src/main/webapp/WEB-INF/css/chatboot.css
@@ -133,16 +133,14 @@ body {
 }
 
 .bottom_wrapper {
-
+  height:200px;
   width: 100%;
   background-color: #fff;
-  padding: 20px 20px;
-  
-
+  padding: 50px 20px;
 }
 .bottom_wrapper .message_input_wrapper {
   display: inline-block;
-  height: 50px;
+  height: 100px;
   border-radius: 25px;
   border: 1px solid #bcbdc0;
   width: calc(100% - 160px);
@@ -157,6 +155,7 @@ body {
   position: absolute;
   outline-width: 0;
   color: gray;
+  resize:none;
 }
 .bottom_wrapper .send_message {
   width: 140px;
