--- a/src/main/webapp/WEB-INF/css/starPoint.css
+++ b/src/main/webapp/WEB-INF/css/starPoint.css
@@ -1,3 +1,10 @@
+/* 
+ * @Author	: Song Ji Yong
+ * @Date	: 2017. 06. 08
+ * @Modify	: 2017. 06. 17
+ * @Details	: 2017. 06. 17 - comment 추가
+ */
+
 .star_rating {
 	font-size: 0;
 	letter-spacing: -4px;
